--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -4,6 +4,7 @@
 	<title>Data Collector</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
 </head>
 <body>
